Hipotecar y deshipotecar propiedades terminado.

--- a/src/Cliente/InterfazCliente.form
+++ b/src/Cliente/InterfazCliente.form
@@ -4835,6 +4835,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Hipotecar/deshipotecar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHipotecarActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="330" y="240" width="170" height="60"/>
